# QtAwesome

./: CHANGES.md  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
QtAwesome/: QtAwesome.cpp  QtAwesome.h  QtAwesome.pri  QtAwesome.pro  QtAwesomeAnim.cpp  QtAwesomeAnim.h  QtAwesomePro.qrc  QtAwesomeProPlus.qrc  QtAwesomeQuickImageProvider.h
QtAwesomeSample/: CMakeLists.txt  QtAwesomeSample.pro  main.cpp  mainwindow.cpp
QtAwesomeSampleQml/: CMakeLists.txt  LICENSE.md  README.md  main.cpp  main.qml
tools/: QtAwesomeEnumGenerated.h.erb  QtAwesomeStringGenerated.h.erb
